--- a/app/src/main/res/layout/activity_test_ivan.xml
+++ b/app/src/main/res/layout/activity_test_ivan.xml
@@ -72,17 +72,19 @@
             android:hint="Age"/>
 
     </LinearLayout>
+
     <Button
+        android:id="@+id/signUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_bg"
+        android:layout_above="@id/loginTV"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:textColor="#fff"
-        android:layout_above="@id/loginTV"
         android:layout_marginBottom="16dp"
-        android:id="@+id/signUpBtn"
-        android:text="CONFIRM"/>
+        android:background="@drawable/btn_bg"
+        android:onClick="onBtnNext"
+        android:text="CONFIRM"
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/loginTV"
