--- a/app/src/main/res/layout/fragment_add_blogs.xml
+++ b/app/src/main/res/layout/fragment_add_blogs.xml
@@ -28,7 +28,8 @@
             android:layout_height="200dp"
             android:layout_marginTop="15dp"
             android:background="@color/colorGray"
-            android:src="@mipmap/photo_icon3_foreground"/>
+            android:onClick="onBtnLogin_Clicked"
+            android:src="@mipmap/photo_icon3_foreground" />
 
         <EditText
             android:id="@+id/pdes"
