working post blogs and news feed and shared_pref

--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -74,7 +74,7 @@
         <ImageView
             android:id="@+id/pimagetv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="450dp"
             android:background="@color/colorWhite" />
 
         <LinearLayout
