--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -2,13 +2,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/size"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenu">
+    tools:context=".Menu">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#FFFFFF">
 
 
@@ -17,12 +19,13 @@
             android:layout_width="755dp"
             android:layout_height="80dp"
             android:adjustViewBounds="false"
+            android:contentDescription="@string/tendina"
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/tendina"
-            tools:ignore="ImageContrastCheck"
-            android:contentDescription="@string/tendina" />
+            tools:ignore="ImageContrastCheck" />
+
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -32,8 +35,7 @@
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.45">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
@@ -73,7 +75,9 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="0dp"
                         android:layout_marginBottom="25dp"
+                        android:clickable="true"
                         android:contentDescription="@string/common_interests"
+                        android:onClick="onCommonInterests_Clicked"
                         app:srcCompat="@drawable/book" />
 
                 </RelativeLayout>
@@ -125,6 +129,7 @@
             android:layout_marginTop="40dp"
             android:orientation="horizontal"
             android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -205,6 +210,41 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
+
+        <ImageButton
+            android:id="@+id/lente"
+            android:layout_width="69dp"
+            android:layout_height="61dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="300dp"
+            android:background="#FFFFFF"
+            android:contentDescription="@string/lente_"
+            android:minHeight="50dp"
+            android:onClick="onSearch_Clicked"
+            android:scaleX="2"
+            android:scaleY="2"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_magnify"
+            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
+
+        <ImageButton
+            android:id="@+id/accountBtn"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="170dp"
+            android:background="@drawable/ic_account"
+            android:contentDescription="@string/account_btn"
+            android:onClick="onAccount_btn_Clicked"
+            android:scaleX="1.8"
+            android:scaleY="1.8"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/lente"
+            app:layout_constraintTop_toBottomOf="@+id/tendina" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
