--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorAccent">#0A527E</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#fff</color>
+    <color name="colorSelected">#A10C88</color>
 
     <color name="colorgray01">#959595</color>
     <color name="colorGray02">#f5f0f0</color>
