--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -8,35 +8,34 @@
 
     <Button
         android:id="@+id/GoogleMapsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="166dp"
-        android:backgroundTint="#B36E6E"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="360dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onGoogleMapsButton_Clicked"
         android:text="@string/location"
-        android:textColor="#000000"
+        android:textColor="#F4EFEF"
+        android:textSize="11sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.152"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465"
         tools:ignore="TextContrastCheck"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/locationUser"
-        android:layout_width="206dp"
-        android:layout_height="75dp"
-        android:text="@string/firstLocationMessage"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="150dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="365dp"
+        android:layout_marginEnd="100dp"
+        android:text="@string/open_the_map"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/GoogleMapsButton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/tendina"
@@ -51,66 +50,121 @@
         tools:ignore="ImageContrastCheck" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profileImage"
         android:layout_width="374dp"
         android:layout_height="190dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/profilepic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tendina"
         tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/profilepic" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/interestsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="440dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onBtnInterests_Clicked"
-        android:text="@string/buttonOfInterest"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        android:text="@string/interests"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/GoogleMapsButton"
-        tools:ignore="DuplicateSpeakableTextCheck" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
 
     <Button
         android:id="@+id/freeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="520dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onBtnFreeTime_Clicked"
-        android:text="@string/buttonOfFreeTime"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        android:text="@string/free_time"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/interestsBtn" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/InterestsUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="172dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="440dp"
         android:text="@string/select_your_interests"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.344"
         app:layout_constraintStart_toEndOf="@+id/interestsBtn"
-        app:layout_constraintTop_toBottomOf="@+id/locationUser"
-        app:layout_constraintVertical_bias="0.161" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/FreeTimeUser"
-        android:layout_width="215dp"
+        android:layout_width="184dp"
         android:layout_height="47dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="17dp"
+        android:layout_marginTop="525dp"
         android:text="@string/select_when_you_are_free_to_hang_out"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintStart_toEndOf="@+id/freeBtn"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageSelector"
+        android:layout_width="375dp"
+        android:layout_height="190dp"
+        android:src="@drawable/clickhere"
+        android:background="#FFFF"
+        android:contentDescription="@string/imageselector"
+        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
+        app:layout_constraintEnd_toEndOf="@+id/profileImage"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/profileImage"
+        app:layout_constraintTop_toTopOf="@+id/profileImage"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#D53E7E"
+        android:onClick="onSave"
+        android:text="@string/save"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileImage"
+        tools:ignore="TextContrastCheck" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="44dp"
+        android:layout_height="48dp"
+        android:entries="@array/menu_items"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/freeBtn"
-        app:layout_constraintTop_toBottomOf="@+id/InterestsUser"
-        app:layout_constraintVertical_bias="0.196" />
+        app:layout_constraintStart_toEndOf="@+id/FreeTimeUser"
+        app:layout_constraintTop_toTopOf="@+id/FreeTimeUser"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/changebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#D53E7E"
+        android:onClick="onChangeBtn"
+        android:text="Change"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileImage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
