--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment xmlns:android = "http://schemas.android.com/apk/res/android"
-        xmlns:tools= "http://schemas.android.com/tools"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id ="@+id/map"
-        tools:context="MapsActivity2"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        tools:context="MapsActivity2" />
 
 </RelativeLayout>
