--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -35,7 +35,8 @@
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.45">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
@@ -53,16 +54,16 @@
                         android:id="@+id/interests"
                         android:layout_width="match_parent"
                         android:layout_height="26dp"
+                        android:layout_alignStart="@+id/interestsImage"
                         android:layout_alignTop="@+id/interestsImage"
-                        android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginStart="5dp"
+                        android:layout_marginStart="15dp"
                         android:layout_marginTop="93dp"
-                        android:layout_marginEnd="0dp"
+                        android:layout_marginEnd="-61dp"
                         android:layout_marginBottom="1dp"
                         android:text="@string/interests_string"
-                        android:textSize="20sp"
+                        android:textSize="17sp"
                         app:fontFamily="sans-serif" />
 
                     <ImageView
@@ -106,7 +107,7 @@
                         android:layout_marginEnd="24dp"
                         android:layout_marginBottom="1dp"
                         android:text="@string/penfriends_string"
-                        android:textSize="20sp"
+                        android:textSize="17sp"
                         app:fontFamily="sans-serif" />
 
                     <ImageView
@@ -157,7 +158,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="1dp"
                         android:text="@string/freetime_string"
-                        android:textSize="20sp"
+                        android:textSize="17sp"
                         app:fontFamily="sans-serif" />
 
                     <ImageView
@@ -194,7 +195,7 @@
                         android:layout_marginStart="50dp"
                         android:layout_marginTop="10dp"
                         android:text="@string/events"
-                        android:textSize="20sp"
+                        android:textSize="17sp"
                         app:fontFamily="sans-serif" />
 
                     <ImageView
@@ -218,25 +219,25 @@
             android:layout_height="61dp"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="300dp"
-            android:background="#FFFFFF"
             android:contentDescription="@string/lente_"
+            android:background="#FFFF"
             android:minHeight="50dp"
             android:onClick="onSearch_Clicked"
-            android:scaleX="2"
-            android:scaleY="2"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_magnify"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/lente9"
             tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
 
         <ImageButton
             android:id="@+id/accountBtn"
-            android:layout_width="42dp"
+            android:layout_width="43dp"
             android:layout_height="42dp"
             android:layout_marginStart="170dp"
-            android:background="@drawable/ic_account"
+            android:background="@drawable/accountbtn"
             android:contentDescription="@string/account_btn"
             android:onClick="onAccount_btn_Clicked"
             android:scaleX="1.8"
