--- a/app/src/main/res/layout/fragment_blank_test.xml
+++ b/app/src/main/res/layout/fragment_blank_test.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlankFragmentTest">
+    tools:context="fragments.BlankFragmentTest">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
