24/05 commit Iole with all main features done

--- a/app/src/main/res/layout/activity_select_interest.xml
+++ b/app/src/main/res/layout/activity_select_interest.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="120dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onInterest1_Clicked"
         android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="120dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onInterest2_Clicked"
         android:text="Button"
         app:layout_constraintStart_toEndOf="@+id/interest1"
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
         android:layout_marginTop="120dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onInterest3_Clicked"
         android:text="Button"
         app:layout_constraintStart_toEndOf="@+id/interest2"
@@ -55,6 +58,7 @@
         android:id="@+id/searchInterestFriends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#D53E7E"
         android:onClick="onContinueBtn_Clicked"
         android:text="search people with selected interest"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
+        android:backgroundTint="#D53E7E"
         android:onClick="onSkipBtn_Clicked"
         android:text="Skip and search people with same free time as you"
         app:layout_constraintEnd_toEndOf="parent"
