--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#fff</color>
     <color name="colorSelected">#D53E7E</color>
+    <color name="gold">#D19F09</color>
+
 
     <color name="colorgray01">#959595</color>
     <color name="colorGray02">#f5f0f0</color>
