--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,17 +30,16 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
-            android:layout_height="175dp"
+            android:layout_height="450dp"
+            android:layout_marginTop="208dp"
             android:orientation="horizontal"
             android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.45">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="170dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 app:cardElevation="5dp">
@@ -48,23 +47,27 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:elevation="5dp">
+                    android:elevation="5dp"
+                    tools:layout_editor_absoluteX="20dp"
+                    tools:layout_editor_absoluteY="267dp">
 
                     <TextView
                         android:id="@+id/interests"
-                        android:layout_width="match_parent"
-                        android:layout_height="26dp"
+                        android:layout_width="112dp"
+                        android:layout_height="38dp"
                         android:layout_alignStart="@+id/interestsImage"
                         android:layout_alignTop="@+id/interestsImage"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="93dp"
-                        android:layout_marginEnd="-61dp"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/interests_string"
-                        android:textSize="17sp"
-                        app:fontFamily="sans-serif" />
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="106dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Compatible friends"
+                        android:textSize="15sp"
+                        app:fontFamily="sans-serif"
+                        tools:layout_editor_absoluteX="45dp"
+                        tools:layout_editor_absoluteY="376dp" />
 
                     <ImageView
                         android:id="@+id/interestsImage"
@@ -73,20 +76,22 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="0dp"
-                        android:layout_marginBottom="25dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="-2dp"
+                        android:layout_marginBottom="57dp"
                         android:clickable="true"
                         android:contentDescription="@string/common_interests"
                         android:onClick="onCommonInterests_Clicked"
-                        app:srcCompat="@drawable/book" />
+                        app:srcCompat="@drawable/book"
+                        tools:layout_editor_absoluteX="30dp"
+                        tools:layout_editor_absoluteY="283dp" />
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="170dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 app:cardElevation="5dp">
@@ -94,133 +99,52 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:elevation="5dp">
+                    android:elevation="5dp"
+                    tools:layout_editor_absoluteX="216dp"
+                    tools:layout_editor_absoluteY="267dp">
 
                     <TextView
                         android:id="@+id/penFriends"
-                        android:layout_width="122dp"
+                        android:layout_width="56dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginEnd="24dp"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/penfriends_string"
-                        android:textSize="17sp"
-                        app:fontFamily="sans-serif" />
+                        android:layout_marginStart="55dp"
+                        android:layout_marginEnd="55dp"
+                        android:layout_marginBottom="21dp"
+                        android:text="Chats"
+                        android:textSize="15sp"
+                        app:fontFamily="sans-serif"
+                        tools:layout_editor_absoluteX="246dp"
+                        tools:layout_editor_absoluteY="378dp" />
 
                     <ImageView
                         android:id="@+id/penFriendsImage"
                         android:layout_width="167dp"
                         android:layout_height="90dp"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="29dp"
+                        android:layout_marginBottom="60dp"
                         android:contentDescription="@string/pen_friends"
-                        app:srcCompat="@drawable/penfriend" />
+                        app:srcCompat="@drawable/penfriend"
+                        tools:layout_editor_absoluteX="216dp"
+                        tools:layout_editor_absoluteY="284dp" />
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
+
+
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="0dp"
-            android:layout_height="175dp"
-            android:layout_marginTop="40dp"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                app:cardElevation="5dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="133dp"
-                    android:elevation="5dp">
-
-                    <TextView
-                        android:id="@+id/freetime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/freetime_string"
-                        android:textSize="17sp"
-                        app:fontFamily="sans-serif" />
-
-                    <ImageView
-                        android:id="@+id/freeTimeImage"
-                        android:layout_width="123dp"
-                        android:layout_height="73dp"
-                        android:layout_above="@+id/freetime"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:contentDescription="@string/common_free_time"
-                        app:srcCompat="@drawable/freetime" />
-
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                app:cardElevation="5dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/events"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/eventsImage"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="10dp"
-                        android:text="@string/events"
-                        android:textSize="17sp"
-                        app:fontFamily="sans-serif" />
-
-                    <ImageView
-                        android:id="@+id/eventsImage"
-                        android:layout_width="126dp"
-                        android:layout_height="86dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="15dp"
-                        android:contentDescription="@string/events"
-                        app:srcCompat="@drawable/events"
-                        tools:ignore="ImageContrastCheck" />
-
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
 
         <ImageButton
             android:id="@+id/lente"
             android:layout_width="69dp"
             android:layout_height="61dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
-            android:layout_marginEnd="300dp"
-            android:contentDescription="@string/lente_"
+            android:layout_marginEnd="295dp"
             android:background="#FFFF"
+            android:contentDescription="@string/lente_"
             android:minHeight="50dp"
             android:onClick="onSearch_Clicked"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -228,7 +152,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="0.085"
             app:srcCompat="@drawable/lente9"
             tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
 
@@ -246,6 +170,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/lente"
             app:layout_constraintTop_toBottomOf="@+id/tendina" />
+
+        <ImageView
+            android:id="@+id/friends"
+            android:layout_width="374dp"
+            android:layout_height="165dp"
+            android:layout_marginTop="275dp"
+            android:layout_weight="1"
+            android:background="#FFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout"
+            app:srcCompat="@drawable/friends2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
